add nodemailer and sent forgot password link

--- a/.env
+++ b/.env
@@ -3,3 +3,11 @@ NODE_ENV = development
 JWT_SECRET = abc123
 
 MONGO_URI = mongodb+srv://haider028:haiderali@to-do-tasks.m8j2r.mongodb.net/to-do?retryWrites=true&w=majority
+
+
+SMTP_HOST=smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_EMAIL=3488a16af9bae3 
+SMTP_PASSWORD=d2602740b9bb53 
+FROM_EMAIL=haider.aumer@gmail.com 
+FROM_NAME=Haider
