--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon backend/server"
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server \" \"npm run client\" "
   },
   "author": "hyderly",
   "license": "ISC",
@@ -21,6 +24,7 @@
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
+    "concurrently": "^6.0.0",
     "morgan": "^1.10.0"
   }
 }
