register use frontend

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.2",
     "nodemailer": "^6.5.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
